# learn-solid-principle

./: example.py  pyproject.toml  srp.py
example/: dip.py  example.py  isp.py  lsp.py  ocp.py  srp.py
